Commit before adding media queries and changing some pixel values on REM.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <section class="main-portfolio" id="mainPortfolio">
         <div class="container">
             
-            <div class="section-title">
+            <div class="section-title section-title--portfolio">
                 <div>
                     <h2>portfolio</h2>
                 </div>                
