--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
                         </div>
 
                         <ul class="page-footer__icons-list">
-                            <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
-                            <li><i class="fa fa-google-plus" aria-hidden="true"></i></li>
-                            <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
-                            <li><i class="fa fa-linkedin" aria-hidden="true"></i></li>
-                            <li><i class="fa fa-dribbble" aria-hidden="true"></i></li>
+                            <li><a href="."><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                            <li><a href="."><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                            <li><a href="."><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                            <li><a href="."><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                            <li><a href="."><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
                         </ul>
 
                     </div>
